<resources>
    <string name="app_name">Gallop</string>
    <string name="app_tagline">Learning, in a snap!</string>
    <string name="sign_in_label">Login to your account</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="log_in_label">Sign in</string>
    <string name="or_label">Or</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_questions">Questions</string>
    <string name="title_settings">Settings</string>
    <string name="error_email">Check email address and try again</string>
    <string name="error_password">Check password and try again</string>
    <string name="authentication_failed_message">Authentication Failed</string>
    <string name="empty_input_field">%1$s cannot be empty</string>
    <string name="incorrect_input_field">%1$s is incorrect</string>
    <string name="course_code_placeholder">ML-101</string>
    <string name="course_title_placeholder">Intro to Machine Learning</string>
    <string name="search_catalog_hint">Search Catalog</string>
    <string name="catalog_empty">No course found</string>
    <string name="questions_empty">No questions found</string>
    <string name="question_author">Asked by %1$s</string>
    <string name="answers_list_header">Answers</string>
    <string name="ask_your_question">Ask your question</string>
    <string name="question_label_hint">Enter label</string>
    <string name="question_content_hint">Write your question</string>
    <string name="publish_label">Publish</string>
    <string name="search_questions_hint">Search questions</string>
    <string name="summary_course_info_label">Summary</string>
    <string name="prerequisites_course_info_label">Prerequisites</string>
</resources>
